[package]
name = "engine"
version = "0.0.1"
authors = ["CrashOverride"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"

luminance = "0.38.0"
luminance-derive = "0.5"
luminance-windowing = "0.8"
luminance-glutin = "0.7.0"

[features]